--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ title: Marco Poetry Chen
 email: marcopchen@gmail.com
 description: 
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://yourdomain.com" # the base hostname & protocol for your site
+url: "marcopchen.github.io" # the base hostname & protocol for your site
 twitter_username: marcopchen
 github_username:  marcopchen
 paginate: 5
