--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@
 # Site settings
 title: Marco Poetry Chen
 email: marcopchen@gmail.com
-description:  
+description: Yes, that's my real middle name.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site
 twitter_username: marcopchen
