--- a/_config.yml
+++ b/_config.yml
@@ -19,3 +19,6 @@ theme-dark: false #Set to true to change to dark website theme
 gems: [jekyll-paginate, kramdown]
 # Build settings
 markdown: kramdown
+
+gems: 
+      - jekyll-sitemap
