--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ url: "https://marcopchen.github.io" # the base hostname & protocol for your site
 twitter_username: marcopchen
 github_username:  marcopchen
 paginate: 5
-theme-dark: false #Set to true to change to dark website theme
+theme-dark: true #Set to true to change to dark website theme
 
 gems: [jekyll-paginate, kramdown]
 # Build settings
