--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: Marco Poetry Chen
+title: Marco Poetry Chen | Home
 email: marcopchen@gmail.com
 description: Yes, that's my actual name.
 baseurl: "" # the subpath of your site, e.g. /blog
